src/scss/index.scss
// My Bootstrap configuration
@import "custom_bootstrap";

// Bootstrap library
@import "bootstrap/scss/bootstrap";

// Font Awesome
@import "https://use.fontawesome.com/releases/v5.0.10/css/all.css";

// Other settings
body {
  min-width: 300px;
  letter-spacing: 0.8px;
}

button:focus {
  outline: none;
}

strong {
  font-weight: 500;
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.logo {
  animation: logo-spin infinite 10s linear;
  height: 24px;
  position: absolute;
  top: 17px;
}

.profile {
  height: 160px;
  border-radius: 80px;
}

.col {
  padding: 0;
}

.navbar {
  height: 3.5em;
}

.navbar-collapse {
  text-align: center;
}

.display-4 {
  &.chi {
    font-weight: 400;
  }
}

.card-body {
  text-align: start;
  padding: 0;
}

@include media-breakpoint-down(md) {
  .navbar-collapse {
    position: absolute;
    top: 3.5em;
    left: 0;
    right: 0;
    width: 100%;
    z-index: 1;
    background-color: $white;
    box-shadow: 0 4px 7px rgba(10, 10, 10, 0.1);
  }

  .navbar-toggler:focus,
  .navbar-toggler:active {
    outline: 0;
  }

  .navbar-toggler span {
    display: block;
    background-color: rgba(0, 0, 0, 0.5);
    height: 3px;
    width: 25px;
    margin-top: 4px;
    margin-bottom: 4px;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    position: relative;
    left: 0;
    opacity: 1;
  }

  .navbar-toggler span:nth-child(1),
  .navbar-toggler span:nth-child(3) {
    -webkit-transition: transform 0.3s ease-in-out;
    -moz-transition: transform 0.3s ease-in-out;
    -o-transition: transform 0.3s ease-in-out;
    transition: transform 0.3s ease-in-out;
  }

  .navbar-toggler:not(.custom-collapsed) span:nth-child(1) {
    top: calc(0.25rem + 7.5px);
    -webkit-transform: rotate(135deg);
    -moz-transform: rotate(135deg);
    -o-transform: rotate(135deg);
    transform: rotate(135deg);
    background-color: rgba(0, 0, 0, 0.9);
  }

  .navbar-toggler:not(.custom-collapsed) span:nth-child(2) {
    height: 12px;
    visibility: hidden;
    background-color: transparent;
  }

  .navbar-toggler:not(.custom-collapsed) span:nth-child(3) {
    top: calc(-0.25rem - 7.5px);
    -webkit-transform: rotate(-135deg);
    -moz-transform: rotate(-135deg);
    -o-transform: rotate(-135deg);
    transform: rotate(-135deg);
    background-color: rgba(0, 0, 0, 0.9);
  }
}

.two-third {
  padding-bottom: 80px;
}

@include media-breakpoint-up(lg) {
  .jumbotron {
    padding: 0;
  }
}

@media (min-width: 1200px) {
  .half {
    width: 50%;
  }
}

@include media-breakpoint-up(md) {
  .navbar-expand-md .navbar-collapse {
    height: calc(1rem + 16px) !important;
  }

  .two-third {
    width: 66.66%;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 160px;
  }
}

@include media-breakpoint-up(sm) {
  .two-fifth {
    width: 40%;
  }

  #projects {
    .card {
      height: 150px;
    }
  }
}

.full-height {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

.two-third {
  .btn-link {
    &:hover {
      background-color: #e2e6ea;
      text-decoration: none;
    }

    a:hover {
      text-decoration: none;
    }
  }
}

@media (max-width: 575.98px) {
  .card {
    width: 100%;
  }
}

#front-page,
#projects,
#publications,
#hobbies,
#resume {
  a {
    color: $gray-700;
    text-decoration: underline;
    &:hover {
      color: $primary;
    }
  }
}

#hobbies {
  .card {
    border: none;
  }
}

.resume {
  .jumbotron {
    margin-bottom: 0;
  }

  .display-4 {
    margin-bottom: 1.5rem;
  }

  .iframe-wrapper {
    width: 500px;
  }

  .fixed-aspect-ratio {
    position: relative;
    width: 100%;
    height: 0;
    padding-bottom: 141.4%;
  }

  .fixed-aspect-ratio iframe {
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
  }
}

